--- a/todoproject/todo/templates/todo/task_management.html
+++ b/todoproject/todo/templates/todo/task_management.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Management</title>
     <link rel="stylesheet" href="{% static 'todo/styles.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Libertinus+Keyboard&display=swap" rel="stylesheet">
 </head>
+<body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'task_management' %}">Task Management</a></li>
+            <li><a href="{% url 'view_tasks' %}">View Tasks</a></li>
+        </ul>
+    </nav>
+    <div>
+        <h1 id="page-header">TASK MANAGEMENT</h1>
+    </div>
+</body>
 </html>
